[package]
name = "hfsplus"
version = "0.1.0"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bitflags = "1.0.4"
fuse = "0.3.1"
time = "0.1.42"
libc = "0.2.48"
unicode-normalization = "0.1.8"
backtrace = "0.3.14"
rand = "0.6.5"
positioned-io = "0.2.2"
